css/general.css
:root {
    --top-bar-height: 36px;
    --tiles-selector-bar-height: 42px;
    --bottom-bar-height: 4vw;
    --bottom-bar-zoomed-height: 8vw;
    --sidenav-width: 12vw;
    --bottom-canvas-margin: 0px;
    --bottom-map-margin: 0px;
    --search-bar-lenght: 20vw;
    --dice-div-height: 372px;
    --dice-div-width: 290px;
    --dice-face-size: 72px;

    --scale: 0.5;
}

body {
    overscroll-behavior: contain;
    height: 100%;
    width: 100%;
    font-size: 1px; /*adjust margin independent to scaling*/
    user-select: none; /* supported by Chrome and Opera */
    -webkit-user-select: none; /* Safari */
    -khtml-user-select: none; /* Konqueror HTML */
    -moz-user-select: none; /* Firefox */
    -ms-user-select: none; /* Internet Explorer/Edge */
}

body.stop-transitions * {
    transition: none !important;
}

/*
image {
    user-select: none; // supported by Chrome and Opera
   -webkit-user-select: none;  //Safari 
   -khtml-user-select: none;  //Konqueror HTML 
   -moz-user-select: none;  //Firefox 
   -ms-user-select: none;  //Internet Explorer/Edge 

}

img{
    user-select: none;  //supported by Chrome and Opera 
   -webkit-user-select: none;  //Safari 
   -khtml-user-select: none;  // Konqueror HTML 
   -moz-user-select: none;  // Firefox 
   -ms-user-select: none;  // Internet Explorer/Edge 
}
*/

/*global*/
.sidebar-container{
    height: 100%;
    width: var(--sidenav-width);
}

.multiplayerSidenav{
    margin-top : 0;
    height: 100%;
    width:inherit;
    overflow-y : auto;
    overflow-x : hidden;
    position: fixed; 
    z-index: 10;
    top: 0; 
    left: 0;
    background-color: #111;
}

.sidenav {
    margin-top : var(--tiles-selector-bar-height);
    height: calc(100% - var(--tiles-selector-bar-height));
    width:inherit;
    overflow-y : auto;
    overflow-x : hidden;
    position: fixed; 
    z-index: 1;
    top: 0; 
    left: 0;
    background-color: #111;
}

#tilesSelectorBar{
    height: var(--tiles-selector-bar-height); /* Full-height: remove this if you want "auto" height */
    width:inherit;
    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
    z-index: 5; /* Stay on top */
    top: 0; /* Stay at the top */
    left: 0;
    background-color: #000; /* Black */
}
/*end of sidenav*/

/*everithing of the map*/
.canvasContainer{
    z-index: 99;
    height: calc(100vh - var(--bottom-canvas-margin) - var(--top-bar-height));
    width: 100%;
    overflow-y : hidden;
    overflow-x : hidden;
    position: fixed; 
    top: calc(var(--top-bar-height));
    left: var(--sidenav-width);
    pointer-events: none;
}

.menuExportBar{
    display: flex;
    top: 0px;
    margin-left: var(--sidenav-width);
    height: var(--top-bar-height);
    background-color: black;
    z-index: 1;
}

.drop-down-search-list{
    position: absolute;
    left: var(--sidenav-width);
    top: var(--top-bar-height);
    width: var(--search-bar-lenght);
    z-index: 99;
    max-height: 60vh;
    overflow-x: auto;
    background-color: white;
}

.drop-down-search-list .table{
    margin: 0px;
}

.searchBar{
    height: 100%;
    font-size: 22px;
    width: var(--search-bar-lenght);
}

.searchButton{
    height: 100%;
    font-size: 2vh;
}

#canvasDragShower{
    z-index: 99;
    opacity: 1.0;
    pointer-events: none;
    background-color: #0000;
}

.map {
    height: calc(100vh - var(--bottom-map-margin) - var(--top-bar-height));
    width: calc(100vw - var(--sidenav-width)); /* Set the width of the sidebar */
    overflow-y : auto;
    overflow-x : auto;
    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
    top: var(--top-bar-height); /* Stay at the top */
    left: var(--sidenav-width);
    opacity: 1;
    
    
    background-attachment:local;
}

.map[scale='0.25']{
    background-image: url('../assets/background_025.jpg');
}

.map[scale='0.5']{
    background-image: url('../assets/background_050.jpg');
}

.map[scale='0.75']{
    background-image: url('../assets/background_075.jpg');
}

.map[scale='1']{
    background-image: url('../assets/background.jpg');
}

.map img{
    -moz-transform:scale(var( --scale));
    -webkit-transform:scale(var( --scale));
    transform:scale(var( --scale));
    transform-origin: 0 0;
}

.control_bar_container{
    display: flex;
    justify-content: center;
    /*width: calc(100vw - var(--sidenav-width) - 1vw);*/
    
    position: fixed;
    z-index: 1;
    bottom: 0;
    left: var(--sidenav-width);
}

.control_bar{
    transition: all .3s linear;
    display: flexbox;
    justify-content: center;
    margin: 0.5vh;
    height: var(--bottom-bar-height);
    border: 0.2vw solid #000;
    border-radius: 0.5vw;
    padding: 0.2vh;
}

.control_bar:hover{
    transition: all .3s linear;
    height: var(--bottom-bar-zoomed-height);
}
/*global*/

/*bottom bar*/
.imageButton{
    transition: all .3s linear;
	height: 100%; border-radius: 0.5vw; border: 0.2vw solid grey; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.imageButton:hover {
  opacity: 0.5;
  cursor:pointer;
}

.clicked{
    /*transform: translateY(-4vh);*/
    transform: translateY(-40%);
 }

.blueButton {
    height: 100%;
	box-shadow:inset 0px -3px 7px 0px #0000cc;
	background:linear-gradient(to bottom, #000000 5%, #350b8f 100%);
	background-color:#000000;
	border-radius:8px;
	border:2px solid #0020c2;
	cursor:pointer;
	color:#ffffff;
	font-family:Arial;
    font-size:12px;
	text-decoration:none;
	text-shadow:0px 1px 0px #000000;
}
.blueButton:hover {
	background:linear-gradient(to bottom, #350b8f 5%, #000000 100%);
	background-color:#350b8f;
}
.blueButton:active {
	background:linear-gradient(to bottom,#660b8f  5%, #000000 100%);
}

.craeteTextBoxButton{
    height: 100%;
    margin-left: 32px;
    background-color: black;
    font-size: 32px;
    font-weight: bold;
    color: white;
}
/*bottom bar*/

/*output and html2canvas max dimension*/
#output{
    position: fixed;
    left: 1200px;
    z-index: -2;
}

.html2canvas-container { width: 4000px !important; height: 4000px !important; }
/*output and html2canvas max dimension*/

/*modal*/
.modal-full {
    margin-top: 1vh !important; 
    margin-bottom: 0px !important; 
    min-width: 92vw;
    margin-left: 4vw;
}

.modal-full .modal-header {
    padding-top: 4px;
    padding-bottom: 4px;
    padding-left: 8px;
    padding-right: 8px;
}

.modal-full .modal-body {
    height: 84vh;
    width: 100%;
}

.half_window_image{
    height: 76vh;
    max-width: 100%;
    float: right;
}

/*save project modal*/
.modal-near-full .modal-header{
    padding-top: 4px;
    padding-bottom: 4px;
    padding-left: 8px;
    padding-right: 8px;
}

.modal-near-full {
    margin-top: 1vh !important; 
    margin-bottom: 0px !important; 
    min-width: 65%;
    margin-left: 80;
}

.modal-near-full .modal-body {
    max-height: 72vh;
    overflow: auto;
}

.full_width_window_image{
    max-height: 64vh;
    width: 100%;
    float: right;
}
/*end of save project modal*/

.labelBig{
    font-size: 20px;
}

.checkmark {
    height: 20px;
    width: 20px;
}

.rounded_range{
    width:100%;
}

.exportPDFButton{
    background-color: black;
    font-size: 16px;
    font-weight: bold;
    color: white;
}
/*modal*/

.card{
    background-color: #fff8;
}

.card:hover{
    background-color: #fffc;
}

.card .card-header{
    padding: 0;
}

.card .card-body{
    padding: 0;
}

.card textarea{
    width:100%; 
    max-width: 100%;
    min-height: 64px;
    min-width: 64px;
    resize: both;
    background-color: #fff8;
    font-family:"Comic Sans MS", cursive, sans-serif;
}

::-webkit-resizer{ border: 12px solid rgba(0,0,0,.1); border-bottom-color: rgba(0,0,0,.5); border-right-color: rgba(0,0,0,.5); outline: 30px solid rgba(0,0,0,.2); }

/*
::-webkit-resizer {
    border: 4px solid black;
    background: red;
}
*/
.card[onmap = "no"] button{
    visibility: hidden;
}

.card button{
    font-size: 16px;
    height:32px; width:32px; 
    /*
    font-size: 1vw;
    height:3vh; width:3vh; 
    */
}

.card img{
    height:32px; width:32px; 
}

.bigtable{
    font-size: 16px;
    font-weight: bold;
}

.bigtable .tbody .tr:hover{
    cursor: pointer;
}

.saveButton {
	box-shadow:inset 0px -3px 7px 0px #0000cc;
	background:linear-gradient(to bottom, #000000 5%, #350b8f 100%);
	background-color:#000000;
	border-radius:10px;
	border:2px solid #0020c2;
	cursor:pointer;
	color:#ffffff;
	font-family:Arial;
	font-size:16px;
    float: right;
    padding:4px 20px;
    margin-top: 0px;
    margin-bottom: 0px;
	text-decoration:none;
	text-shadow:0px 1px 0px #000000;
}
.saveButton:hover {
	background:linear-gradient(to bottom, #350b8f 5%, #000000 100%);
	background-color:#350b8f;
}
.saveButton:active {
	margin-top:10px;
}


.cancelSaveButton{
    width: 100%;
    box-shadow:inset 0px 1px 0px 0px #f55858;
	background:linear-gradient(to bottom, #d10404 5%, #520c0c 100%);
	background-color:#d10404;
	border-radius:3px;
	border:1px solid #75131b;
	display:inline-block;
	cursor:pointer;
	color:#000000;
	font-family:Arial;
	font-size:16px;
	padding:4px 12px;
	text-decoration:none;
	text-shadow:0px 1px 0px #801616;
}

.cancelSaveButton:hover{
    background:linear-gradient(to bottom, #520c0c 5%, #d10404 100%);
	background-color:#520c0c;
}

.cancelSaveButton:active{
    position:relative;
	top:1px;
}

.selectButton {
    width: 100%;
	box-shadow:inset 0px 1px 0px 0px #24a600;
	background:linear-gradient(to bottom, #40b800 5%, #004713 100%);
	background-color:#004713;
	border-radius:3px;
	border:1px solid #00a310;
	display:inline-block;
	cursor:pointer;
	color:#000000;
	font-family:Arial;
	font-size:16px;
	padding:4px 12px;
	text-decoration:none;
	text-shadow:0px 1px 0px #428538;
}
.selectButton:hover {
    background:linear-gradient(to bottom, #004713 5%, #40b800 100%);
	
	background-color:#40b800;
}
.selectButton:active {
	position:relative;
	top:1px;
}

